criterion now only added for non-wasm32 targets
The inclusion of criterion as a dev-dependency was causing the
"wasm-pack test" process to fail.  This change ensures that criterion is
only included when building for non-wasm32 targets (i.e. when running
"cargo bench").

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,13 +28,17 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 wee_alloc = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
-criterion = "0.2"
 wasm-bindgen-test = "0.2"
+
+# Add criterion for benchmark tests only for non-wasm32 targets
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+criterion = "0.2"
 
 [profile.release]
 lto = true
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
 
 [[bench]]
 name = "benchmarks"
