Changed rustc opt-level to 3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,7 @@ criterion = "0.2"
 
 [profile.release]
 lto = true
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = 3
 
 
 [[bench]]
